--- a/wp-content/themes/blaszok-child/style.css
+++ b/wp-content/themes/blaszok-child/style.css
@@ -102,7 +102,7 @@ Version:        1.0
 	-webkit-transform: translate(-50%, -20%);
 	transform: translate(-50%, -20%);
 	height: 50%;
-	width: 30%;
+	width: 25%;
 	z-index: 1010;
 }
 
@@ -133,7 +133,8 @@ Version:        1.0
 
 #tryit-picture #img-holder img {
 	max-width: 100%;
-	height: auto;
+	height: 75%;
+	width: auto;
 }
 
 #color-selector {
