--- a/wp-content/themes/blaszok-child/style.css
+++ b/wp-content/themes/blaszok-child/style.css
@@ -49,6 +49,10 @@ Version:        1.0
 	margin: 0 -20px;
 }
 
+#size-drop{
+	width:130px !important;
+}
+
 /**** TRY IT STYLES ****/
 #toolbar{position:fixed; z-index:3; right:5%; top:60px; padding:5px; background:url('images/fs_img_g_bg.png');}
 #toolbar img{border:none;}
