--- a/wp-content/themes/blaszok-child/style.css
+++ b/wp-content/themes/blaszok-child/style.css
@@ -102,7 +102,7 @@ Version:        1.0
 	-webkit-transform: translate(-50%, -20%);
 	transform: translate(-50%, -20%);
 	height: 50%;
-	width: 25%;
+	width: 100%;
 	z-index: 1010;
 }
 
@@ -121,7 +121,7 @@ Version:        1.0
 	height: 100%;
 }
 
-#tryit-picture #img-holder {
+/*#tryit-picture #img-holder {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -129,12 +129,14 @@ Version:        1.0
 	bottom: 0;
 	z-index: 1011;
 	overflow: hidden;
-}
+}*/
 
 #tryit-picture #img-holder img {
 	max-width: 100%;
 	height: 75%;
 	width: auto;
+	margin: auto;
+	display: block;
 }
 
 #color-selector {
