--- a/wp-content/themes/blaszok-child/style.css
+++ b/wp-content/themes/blaszok-child/style.css
@@ -57,10 +57,10 @@ Version:        1.0
 #toolbar{position:fixed; z-index:3; right:5%; top:60px; padding:5px; background:url('images/fs_img_g_bg.png');}
 #toolbar img{border:none;}
 /*#img_title{position:fixed; z-index:3; left:10px; top:40px; padding:10px; background:rgba(0, 0, 0, 0.5); color:#FFF; font-family:'Josefin Sans Std Light', arial, serif; font-size:24px; text-transform:uppercase;}*/
-#bg{position:fixed; z-index:1; overflow:hidden; width:90%; height:85%;-webkit-transform:translate3d(0,0,0);z-index: 0;}
+#bg{/*position:fixed;*/ z-index:1; overflow:hidden; /*width:90%; height:85%;*/ position:absolute; width:100%; height:100%; -webkit-transform:translate3d(0,0,0);z-index: 0;}
 #bgimg{display:none; -ms-interpolation-mode: bicubic; width: auto; position: absolute; bottom: 0; left: 50%; -webkit-transform: translate(-50%, 0); transform: translate(-50%, 0); margin-left: 0 !important;}
 #preloader{position:relative; z-index:3; width:32px; padding:20px; top:80px; margin:auto; background:#000;}
-#thumbnails_wrapper{z-index:2; position:fixed; bottom:6.8%; width:90%; background:rgba(0, 0, 0, 0); /* stupid ie needs a background value to understand hover area */}
+#thumbnails_wrapper{z-index:2; position:fixed; /*bottom:6.8%; width:90%;*/ bottom:0; width:100%; background:rgba(0, 0, 0, 0); /* stupid ie needs a background value to understand hover area */}
 #outer_container{position:relative; padding:0; width:70%; margin:0 0 0 30%; background: #000;}
 #outer_container .thumbScroller{position:relative; overflow:hidden;}
 #outer_container .thumbScroller, #outer_container .thumbScroller .container {height:85px;}
@@ -92,9 +92,9 @@ Version:        1.0
 }
 
 #tryit-header .wall-size {
-	position: absolute;
+	/*position: absolute;
 	right: 10px;
-	top: 5px;
+	top: 5px;*/
 	color: #fff;
 	font-size: 0.8em;
 }
@@ -200,7 +200,7 @@ Version:        1.0
 	width: 30%;
 	background: #000;
 	color: #fff;
-	bottom: 0;
+	/*bottom: 0;*/
 	left: 0;
 }
 
@@ -415,7 +415,7 @@ padding-top: 0px !important;
 z-index: 9999;
 position: relative;
 text-align: center;
-margin-top: 20px;
+/*margin-top: 20px;*/
 color:#FFF;
 }
 
@@ -444,9 +444,9 @@ clear:both;
 #close-try-it{
 	position: absolute;
 	z-index: 9999;
-	bottom: 0;
-	right: 0;
-	margin-right: 10px;
+	bottom: 4%;
+	right: 2%;
+	/*margin-right: 10px;*/
 	padding: 03px;
 	background: #E14F4F;
 	color: #FFF;
@@ -562,7 +562,12 @@ section.products .mpcth-product-wrap .mpcth-sale-wrap .onsale{
 #mpcth_page_wrap .woocommerce .mpcth-sale-wrap:before, .woocommerce-page #mpcth_page_wrap .mpcth-sale-wrap:after{
 	right: -.4em;
 }
-
+.mpcth-product-content .mpcth-vc-row-wrap{
+	width: 100% !important;
+}
+#mpcth_page_wrap .woocommerce .products .product, .woocommerce #mpcth_page_wrap .products .product{
+	width: 25%;
+}
 /*custom*/
 
 /*style_custom.css file code starts*/
