--- a/wp-content/themes/blaszok-child/style.css
+++ b/wp-content/themes/blaszok-child/style.css
@@ -729,6 +729,52 @@ body
 .fbc_wc_tabs_tab{
 	display:none !important;
 }
+
+
+
+
+
+
+/* Author Page Pagination*/
+
+ul.page-numbers {
+    margin: 20px 0 10px;
+    width: 100%;
+    padding: 0;
+    font-size: 12px;
+    line-height: normal;
+    clear: both;
+    /*float: left;*/
+    text-align:center;
+}
+
+ul.page-numbers li {
+       /*float: left;*/
+       display: inline-block;
+    }
+
+ul.page-numbers a,
+ul.page-numbers span {
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#E4E3E3), to(#FFFFFF));
+    background: -moz-linear-gradient(top,  #E4E3E3,  #FFFFFF);
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#E4E3E3', endColorstr='#FFFFFF');
+    padding: 3px 4px 2px 4px; 
+    margin: 2px;
+    text-decoration: none;
+    border: 1px solid #FBD1D3;
+    color: #ed1b24;
+}
+
+ul.page-numbers a:hover,
+ul.page-numbers span.current {  
+    border: 1px solid #F25F66;
+    color: #FABBBD;
+}
+
+
 /*style_custom.css file code ends*/
 
 
